# PasswordManager

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  main.cpp  main_test  tastatura.txt  temp.cpp
.github/actions/clang-tidy/: action.yml
.github/actions/configure-cmake/: action.yml
.github/actions/install-packages/: action.yml
assets/vaults/: a.json  test.json  test1.json
cmake/: CopyHelper.cmake
include/: file_manager.hpp  utils.cpp  utils.hpp  utils_vault.cpp  utils_vault.hpp  vault_components.hpp
include/aboutstate/: aboutstate.cpp  aboutstate.hpp
include/category/: category.cpp  category.hpp
include/exceptions/: errorHandling.cpp
include/exceptions/directory_not_exist/: directory_not_exist.cpp  directory_not_exist.hpp
include/exceptions/enc_has_no_mac/: enc_has_no_mac.cpp  enc_has_no_mac.hpp
include/exceptions/fail_enc_message/: fail_enc_message.cpp  fail_enc_message.hpp
include/exceptions/fail_hash/: fail_hash.cpp  fail_hash.hpp
include/exceptions/fail_hash_master/: fail_hash_master.cpp  fail_hash_master.hpp
include/exceptions/failed_open_vault/: failed_open_vault.cpp  failed_open_vault.hpp
include/exceptions/failed_open_vault_edit/: failed_open_vault_edit.cpp  failed_open_vault_edit.hpp
include/exceptions/item_value_invalid_enc/: item_value_invalid_enc.cpp  item_value_invalid_enc.hpp
include/exceptions/master_key_mismatch_exception/: master_key_mismatch_exception.cpp  master_key_mismatch_exception.hpp
include/exceptions/not_type_directory/: not_type_directory.cpp  not_type_directory.hpp
include/exceptions/sodium_init_failed/: sodium_init_failed.cpp  sodium_init_failed.hpp
include/exceptions/vault_invalid_json/: vault_invalid_json.cpp  vault_invalid_json.hpp
include/exceptions/vault_not_found_exception/: vault_not_found_exception.cpp  vault_not_found_exception.hpp
include/exitstate/: exitstate.cpp  exitstate.hpp
include/files/: files.cpp  files.hpp
include/folder/: folder.cpp  folder.hpp
include/login/: login.cpp  login.hpp  loginbuilder.cpp  loginbuilder.hpp
include/logincredentials/: logincredentials.cpp  logincredentials.hpp
include/mainmenustate/: mainmenustate.cpp  mainmenustate.hpp
include/masterkey/: masterkey.cpp  masterkey.hpp
include/menustate/: menustate.cpp  menustate.hpp
include/message/: message.cpp  message.hpp
include/statemanager/: statemanager.cpp  statemanager.hpp
include/unit/: unit.hpp
include/vault/: vault.cpp  vault.hpp
include/vaultindex/: vaultindex.hpp
include/vaultinteractionstate/: vaultinteractionstate.cpp  vaultinteractionstate.hpp
include/vaultselectionstate/: vaultselectionstate.cpp  vaultselectionstate.hpp
scripts/: run_cppcheck.sh
